# snap-tray

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Info.plist  LICENSE  README.md  README.zh-TW.md
.github/: release.yml
docs/: 404.html  (+14 more)
tests/: CMakeLists.txt
tests/Annotations/: tst_AnnotationContext.cpp  tst_AnnotationLayer.cpp  tst_ArrowAnnotation.cpp  tst_EmojiStickerAnnotation.cpp  tst_MarkerStroke.cpp  tst_PencilStroke.cpp  tst_PolylineAnnotation.cpp  tst_ShapeAnnotation.cpp  tst_StepBadgeAnnotation.cpp  tst_TextBoxAnnotation.cpp
tests/App/: tst_MainApplicationTrayMenu.cpp
tests/Audio/: tst_AudioFileWriter.cpp
tests/Beautify/: tst_BeautifyRenderer.cpp  tst_BeautifySettings.cpp
tests/CLI/: tst_CLIHandlerFeatureGating.cpp  tst_CaptureOutputHelper.cpp  tst_NumericArgumentValidation.cpp  tst_WindowsPathEnv.cpp
tests/ColorAndWidthWidget/: tst_Events.cpp  tst_HitTest.cpp  tst_Signals.cpp  tst_State.cpp
tests/Compose/: tst_ComposeRichTextEdit.cpp  tst_ComposeSettingsManager.cpp  tst_ComposeTemplateManager.cpp  tst_ComposeWindow.cpp  tst_RichClipboardExporter.cpp
tests/Cursor/: tst_CursorAuthority.cpp  tst_CursorManager.cpp  tst_CursorQmlGuard.cpp  tst_CursorStyleCatalog.cpp  tst_CursorSurfaceSupport.cpp
tests/Detection/: tst_AutoBlurManager.cpp  tst_CredentialDetector.cpp  tst_FaceDetector.cpp  tst_QRCodeManager.cpp  tst_ScrollAlignmentEngine.cpp  tst_ScrollStitchEngine.cpp  tst_TableDetector.cpp  tst_TextDetector.cpp  tst_WindowDetectorMacFilters.cpp  tst_WindowDetectorQueryMode.cpp
tests/Encoding/: tst_EncoderFactory.cpp  tst_EncodingWorker.cpp  tst_NativeGifEncoder.cpp
tests/Hotkey/: tst_HotkeyManager.cpp  tst_TypeHotkeyDialog.cpp
tests/IPC/: SingleInstanceGuardProbe.cpp  tst_IPCProtocol.cpp  tst_SingleInstanceGuard.cpp  tst_SingleInstanceGuardRace.cpp
tests/MCP/: tst_ServerProtocol.cpp  tst_Tools.cpp
tests/Packaging/: tst_AppImageBinfmtBypass.sh
tests/PinWindow/: tst_AnnotationSerializer.cpp  tst_ClickThrough.cpp  tst_ContextMenuTranslations.cpp  tst_CropUndo.cpp  tst_HistoryModel.cpp  tst_HistoryRecorder.cpp  tst_HistoryStore.cpp  tst_ImageTransformer.cpp  tst_PinHistoryModel.cpp  tst_PinHistoryStore.cpp  tst_PinHistoryWindow.cpp  tst_PinMergeHelper.cpp  tst_PinWindowPlacement.cpp  tst_RegionLayoutManager.cpp  tst_RegionLayoutRenderer.cpp  tst_Resize.cpp  tst_StyleSync.cpp  tst_TextToolFormatting.cpp  tst_Transform.cpp  tst_WatermarkRenderer.cpp
tests/Platform/: tst_GuiClipboardOrdering.cpp  tst_LinuxDesktopEnvironment.cpp  tst_PlatformCapabilities.cpp
tests/Qml/: tst_BeautifyPanelBackend.cpp  tst_BeautifyPanelQml.cpp  tst_CanvasToolbarViewModel.cpp  tst_EmojiPickerBackend.cpp  tst_FloatingOverlayCaptureExclusion.mm  tst_FloatingToolbar.cpp  tst_PinToolOptionsViewModel.cpp  tst_PinToolbarViewModel.cpp  tst_PlacementHelpers.cpp  tst_QmlBadge.cpp  tst_QmlOverlayManagerLifetime.cpp  tst_QtQuickBackendPolicy.cpp  tst_QtQuickBackendWin.cpp  tst_RegionToolbarViewModel.cpp  tst_ScreenPickerViewModel.cpp  tst_SettingsWindowFeatureGating.cpp  tst_UpdateDialogViewModel.cpp  tst_WidthSectionQml.cpp  tst_WindowPolicyGuard.cpp  tst_WindowPolicyWin.cpp
tests/RecordingManager/: tst_AudioIntegration.cpp  tst_CoreAudioCaptureEngineSafety.cpp  tst_DXGICaptureEngineThreadLifecycle_win.cpp  tst_InitTask.cpp  tst_Lifecycle.cpp  tst_RecordingFileUtils.cpp  tst_RegionSizing.cpp  tst_ScreenSourceService.cpp  tst_StateMachine.cpp  tst_WASAPIAudioCaptureEngineThreadSafety_win.cpp
tests/RegionSelector/: RegionSelectorTestAccess.h  tst_AttachmentLayout.cpp  tst_CaptureChromeWindow.cpp  tst_CaptureShortcutHintsOverlay.cpp  tst_CaptureShortcutHintsOverlay.h  tst_CopyToClipboard.cpp  tst_DeferredInitialization.cpp  tst_HistoryReplay.cpp  tst_MagnifierPanel.cpp  tst_MagnifierToolbarVisibility.cpp  tst_MultiRegionListPanel.cpp  tst_MultiRegionManagerDeleteReindex.cpp  tst_MultiRegionManagerImages.cpp  tst_MultiRegionManagerReorder.cpp  tst_MultiRegionReplaceFlow.cpp  tst_MultiRegionSubToolbar.cpp  tst_RegionExportManager.cpp  tst_RegionInputHandler.cpp  tst_RegionPainter.cpp  tst_RegionPainterChrome.cpp  tst_RegionSettingsHelper.cpp  tst_ScrollCaptureSessionFlow.cpp  tst_SelectionDirtyRegionPlanner.cpp  tst_SelectionStateManager.cpp  tst_ShapeAnnotationEditor.cpp  tst_StyleSync.cpp  tst_TextAnnotationEditor.cpp  tst_TraceProbe.cpp  tst_TransformationGizmo.cpp  tst_TransientUiCancelGuard.cpp  tst_UpdateThrottler.cpp
tests/ScreenCanvas/: tst_AnnotationRenderHelper.cpp  tst_CopyExport.cpp  tst_Placement.cpp  tst_SessionRecovery.cpp  tst_StyleSync.cpp
tests/ScrollCapture/: tst_ContentRegionDetector.cpp  tst_ScrollStitcher.cpp
tests/Scrolling/: tst_FrameStabilityDetector.cpp  tst_ImageStitcher.cpp  tst_SeamQualityEvaluator.cpp
tests/ScrollingCapture/: tst_ImageCombiner.cpp
tests/Settings/: tst_AnnotationSettingsManager.cpp  tst_AutoLaunchSyncPolicy.cpp  tst_FileSettingsManager.cpp  tst_MCPSettingsManager.cpp  tst_PinWindowSettingsManager.cpp  tst_QmlTranslations.cpp  tst_RegionCaptureSettingsManager.cpp  tst_SettingsBackend.cpp  tst_SettingsStorageLocation.cpp  tst_WindowsPrintScreenSettingsManager.cpp
tests/Share/: tst_ShareUploadClient.cpp
tests/ToolOptionsPanel/: tst_Events.cpp  tst_HitTest.cpp  tst_Signals.cpp  tst_State.cpp
tests/Tools/: tst_ToolManagerEscape.cpp  tst_ToolManagerRepaint.cpp  tst_ToolRegistry.cpp
tests/UISections/: tst_ArrowStyleSection.cpp  tst_ColorSection.cpp  tst_ShapeSection.cpp  tst_SizeSection.cpp  tst_WidthSection.cpp
tests/Update/: tst_InstallSourceDetector.cpp  tst_UpdateChecker.cpp  tst_UpdateCoordinator.cpp  tst_UpdateSettingsManager.cpp  tst_generate_appcast.py  tst_render_release_notes_page.py
tests/Utils/: tst_CoordinateHelper.cpp  tst_FilenameTemplateEngine.cpp  tst_ImageSaveUtils.cpp  tst_ScreenCaptureRegionUtils.cpp  tst_TrayTooltipFormatter.cpp
tests/Video/: tst_MediaFoundationPipeline.cpp  tst_VideoTimeline.cpp  tst_VideoTrimmerSafety.cpp
tests/mocks/: MockAudioCaptureEngine.cpp  MockAudioCaptureEngine.h  MockCaptureEngine.cpp  MockCaptureEngine.h  MockVideoEncoder.cpp  MockVideoEncoder.h
(+1162 files in other folders)
